--- a/index.html
+++ b/index.html
@@ -4,47 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>IreBabs</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <!-- Logo -->
-            <div class="logo">
-                <img src="images/watermark 12.png" alt="">
-                <h1 class="pt-10">IreBabs Photography</h1>
-            </div>
-
-            <!-- links -->
-            <div class="nav-links pt-40">
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Moments</li>
-                    <li>Gallery</li>
-                    <li>Contact</li>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark navbar-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white" href="#">
+                    <img src="/images/watermark 12.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    IreBabs
+                  </a>
+              <button class="navbar-toggler text-white btn-default" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon text-white"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Moments</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-white" href="#">Contact</a>
+                  </li>
                 </ul>
+              </div>
             </div>
-
-            <!-- Social Media Links -->
-            <div class="media-buttons pt-20">
-                <a href="https://instagram.com/irebabshots?igshid=OGQ5ZDc2ODk2ZA==">
-                    <button class="btn default w-60" title="Instagram"><i class="fa-brands fa-instagram"></i></button>
-                </a>
-               <a href="https://twitter.com/ire_babs">
-                <button class="btn default w-60" title="X"><i class="fa-brands fa-x-twitter"></i></button>
-               </a>
-            </div>
-        </nav>
+          </nav>
     </header>
 
     <!-- Cover Photo or Billboard -->
     <section class="cover">
-        <h1>Ire <br>Babs <br><span>photography</span></h1>
-        <img src="images/IMG_4886-Edit.jpg" alt="">
-        
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 d-flex justify-content-end">
+                    <h1>Ire <br>Babs <br><span>photography</span></h1>
+                </div>
+                <div class="col-md-6">
+                    <img src="images/IMG_4886-Edit.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
     </section>
 
    <!-- Moments Captured -->
@@ -126,6 +136,7 @@
         <p class="text-center">Copyright &copy; IreBabs <script>document.write(new Date().getFullYear())</script></p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
