Agba Programmer Update

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h1>Ire <br>Babs <br><span>photography</span></h1>
                 </div>
                 <div class="col-md-8 col-sm-12">
-                    <img src="images/IMG_4886-Edit.jpg" class="img-fluid" alt="">
+                    <img src="images/IMG_3660-Edit.jpg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -73,10 +73,10 @@
             <div class="row">
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/images/IMG_9573-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">An Aisle to Success</h5>
+                        <p class="card-text">The start of something big. My First ever Image as IreBabs</p>
                         <a href="#" class="btn btn-primary">View Post</a>
                         </div>
                     </div>
@@ -84,10 +84,10 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/images/IMG_0070-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Who is The Fairest of them all?</h5>
+                        <p class="card-text">"Conscience is the mirror of our souls". A little work of my magic brought this picture to life </p>
                         <a href="#" class="btn btn-primary">View Post</a>
                         </div>
                     </div>
@@ -95,10 +95,10 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/images/IMG_4821-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Culture</h5>
+                        <p class="card-text">The art of photography is to witness reality in different dimensions</p>
                         <a href="#" class="btn btn-primary">View Post</a>
                         </div>
                     </div>
@@ -106,10 +106,10 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/images/IMG_6465-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">..</h5>
+                        <p class="card-text">"Taking an image, freezing a moment, reveals how rich reality truly is"</p>
                         <a href="#" class="btn btn-primary">View Post</a>
                         </div>
                     </div>
@@ -117,10 +117,10 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/images/IMG_1316-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">..</h5>
+                        <p class="card-text">Beauty, the illumination or the reflection of our souls.</p>
                         <a href="#" class="btn btn-primary">View Post</a>
                         </div>
                     </div>
@@ -128,10 +128,10 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="/images/IMG_2052-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <h5 class="card-title">Life's an art</h5>
+                        <p class="card-text">No, This is not a painting but this is a picture painted by the sun without instruction in art. .</p>
                         <a href="#" class="btn btn-primary">View Post</a>
                         </div>
                     </div>
