--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand text-white" href="#">
-                    <img src="/images/watermark 12.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="images/watermark 12.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     IreBabs
                   </a>
 
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="/images/IMG_9573-1.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_9573-1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">An Aisle to Success</h5>
                         <p class="card-text">The start of something big. My First ever Image as IreBabs</p>
@@ -84,7 +84,7 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="/images/IMG_0070-Edit.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_0070-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Who is The Fairest of them all?</h5>
                         <p class="card-text">"Conscience is the mirror of our souls". A little work of my magic brought this picture to life </p>
@@ -95,7 +95,7 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="/images/IMG_4821-Edit.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_4821-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Culture</h5>
                         <p class="card-text">The art of photography is to witness reality in different dimensions</p>
@@ -106,7 +106,7 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="/images/IMG_6465-Edit.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_6465-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">..</h5>
                         <p class="card-text">"Taking an image, freezing a moment, reveals how rich reality truly is"</p>
@@ -117,7 +117,7 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="/images/IMG_1316-Edit.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_1316-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">..</h5>
                         <p class="card-text">Beauty, the illumination or the reflection of our souls.</p>
@@ -128,7 +128,7 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="/images/IMG_2052-Edit.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_2052-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Life's an art</h5>
                         <p class="card-text">No, This is not a painting but this is a picture painted by the sun without instruction in art. .</p>
