--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h1>Ire <br>Babs <br><span>photography</span></h1>
                 </div>
                 <div class="col-md-8 col-sm-12">
-                    <img src="images/IMG_3660-Edit.jpg" class="img-fluid" alt="">
+                    <img src="images/IMG_3660-Edit.JPG" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -73,7 +73,7 @@
             <div class="row">
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="images/IMG_9573-1.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_9573-1.JPG" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">An Aisle to Success</h5>
                         <p class="card-text">The start of something big. My First ever Image as IreBabs</p>
@@ -128,7 +128,7 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
-                        <img src="images/IMG_2052-Edit.jpg" class="card-img-top" alt="...">
+                        <img src="images/IMG_2052-Edit.JPG" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Life's an art</h5>
                         <p class="card-text">No, This is not a painting but this is a picture painted by the sun without instruction in art. .</p>
