--- a/index.html
+++ b/index.html
@@ -140,14 +140,25 @@
         </div>
     </section>
     
-    <section class="portraits">
+    <section class="portraits"  style="margin-top: 70px;">
         <h2>Portraits</h2>
-        <div>
-            <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
+        <div class="row" style="margin-top: 30px;">
+
+            <div class="zoom-wrapper d-flex">
+                <img src="/images/IMG_2200.JPG" alt="">
+
+                <img src="/images/IMG_0057-16.JPG" alt="">
+
+                <img src="/images/IMG_4432-Edit.JPG" alt="">
+
+                <img src="/images/IMG_4886-Edit.JPG" alt="">
+
+                <img src="/images/IMG_3643-Edit.JPG" alt="">
+            </div>
+
         </div>
     </section>
+
 
     
     <section class="wed">
