--- a/index.html
+++ b/index.html
@@ -179,12 +179,44 @@
     <!-- Gallery -->
     <section class="gallery">
         <h1>Gallery</h1>
-        <div>
-            <img src="" alt="" srcset="">
-            
-            <!-- slider -->
-            <div></div>
-        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/images/IMG_0105-Edit.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/IMG_3479-Edit-2.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/IMG_1317-Edit.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/IMG_7348.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/IMG_9994-Edit.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/IMG_3068-Edit.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="/images/IMG_0026-Edit.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
     </section>
 
     <footer>
@@ -200,8 +232,8 @@
             <div class="col-md-4 p-20">
                 <h3 class="footer-header">Contact Us</h3>
                 <div><p>ireoluwababayemi@gmail.com</p></div>
-                <div><p>Studio address in a place sha</p></div>
-                <div><p>+23470000000000</p></div>
+                <div><p>Studio address</p></div>
+                <div><p>+2348134746252</p></div>
 
                 <h4 class="sub-text">Subscribe to News Letter</h4>
                 <form class="form">
