--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </section>
 
    <!-- Moments Captured -->
-   <section class="moments">
+   <section class="moments" style="margin-top: 60px;">
         <div class="container">
             <h1>Moments Captured</h1>
 
