--- a/index.html
+++ b/index.html
@@ -144,19 +144,19 @@
         <h2>Portraits</h2>
         <div class="row" style="margin-top: 30px;">
             <div class="zoom-wrapper d-flex">
-                <img src="/images/IMG_2200.JPG" alt="">
+                <img src="images/IMG_2200.JPG" alt="">
             </div>
             <div class="zoom-wrapper d-flex">
-                <img src="/images/IMG_0057-16.JPG" alt="">
+                <img src="images/IMG_0057-16.JPG" alt="">
             </div>
             <div class="zoom-wrapper d-flex">
-                <img src="/images/IMG_4432-Edit.JPG" alt="">
+                <img src="images/IMG_4432-Edit.JPG" alt="">
             </div>
             <div class="zoom-wrapper d-flex">
-                <img src="/images/IMG_4886-Edit.JPG" alt="">
+                <img src="images/IMG_4886-Edit.JPG" alt="">
             </div>
             <div class="zoom-wrapper d-flex">
-                <img src="/images/IMG_3643-Edit.JPG" alt="">
+                <img src="images/IMG_3643-Edit.JPG" alt="">
             </div>
         </div>
     </section>
@@ -167,48 +167,48 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active indicator" aria-current="true" aria-label="Slide 1">
-                <img src="/images/IMG_0105-Edit.jpg" class="d-block" style="height: 40px" alt="...">
+                <img src="images/IMG_0105-Edit.jpg" class="d-block" style="height: 40px" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="indicator" aria-label="Slide 2">
-                <img src="/images/IMG_3479-Edit-2.jpg" class="d-block" style="height: 40px;" alt="...">
+                <img src="images/IMG_3479-Edit-2.jpg" class="d-block" style="height: 40px;" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="indicator" aria-label="Slide 3">
-                <img src="/images/IMG_1317-Edit.jpg" class="d-block" style="height: 40px;" alt="...">
+                <img src="images/IMG_1317-Edit.jpg" class="d-block" style="height: 40px;" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" class="indicator" aria-label="Slide 4">
-                <img src="/images/IMG_7348.JPG" class="d-block" style="height: 40px;" alt="...">
+                <img src="images/IMG_7348.JPG" class="d-block" style="height: 40px;" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" class="indicator" aria-label="Slide 5">
-                <img src="/images/IMG_9994-Edit.JPG" class="d-block" style="height: 40px;" alt="...">
+                <img src="images/IMG_9994-Edit.JPG" class="d-block" style="height: 40px;" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" class="indicator" aria-label="Slide 6">
-                <img src="/images/IMG_3068-Edit.jpg" class="d-block" style="height: 40px;" alt="...">
+                <img src="images/IMG_3068-Edit.jpg" class="d-block" style="height: 40px;" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" class="indicator" aria-label="Slide 7">
-                <img src="/images/IMG_0026-Edit.jpg" class="d-block" style="height: 40px;" alt="...">
+                <img src="images/IMG_0026-Edit.jpg" class="d-block" style="height: 40px;" alt="...">
               </button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/images/IMG_0105-Edit.jpg" class="d-block w-100" alt="...">
+                <img src="images/IMG_0105-Edit.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/IMG_3479-Edit-2.jpg" class="d-block w-100" alt="...">
+                <img src="images/IMG_3479-Edit-2.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/IMG_1317-Edit.jpg" class="d-block w-100" alt="...">
+                <img src="images/IMG_1317-Edit.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/IMG_7348.JPG" class="d-block w-100" alt="...">
+                <img src="images/IMG_7348.JPG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/IMG_9994-Edit.JPG" class="d-block w-100" alt="...">
+                <img src="images/IMG_9994-Edit.JPG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/IMG_3068-Edit.jpg" class="d-block w-100" alt="...">
+                <img src="images/IMG_3068-Edit.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="/images/IMG_0026-Edit.jpg" class="d-block w-100" alt="...">
+                <img src="images/IMG_0026-Edit.jpg" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
