--- a/index.html
+++ b/index.html
@@ -136,6 +136,39 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-md-4" style="margin-top: 20px;">
+                  <div class="card bg-gray" style="width: 100%;">
+                      <img src="images/IMG_2333-Edit.JPG" class="card-img-top" alt="...">
+                      <div class="card-body">
+                      <h5 class="card-title">..t</h5>
+                      <p class="card-text">..</p>
+                      <a href="#" class="btn btn-primary">View Post</a>
+                      </div>
+                  </div>
+              </div>
+
+              <div class="col-md-4" style="margin-top: 20px;">
+                <div class="card bg-gray" style="width: 100%;">
+                    <img src="images/IMG_5438-Edit.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">..</h5>
+                    <p class="card-text">Stay Cool, Stay Blue.</p>
+                    <a href="#" class="btn btn-primary">View Post</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4" style="margin-top: 20px;">
+              <div class="card bg-gray" style="width: 100%;">
+                  <img src="images/IMG_3245.JPG" class="card-img-top" alt="...">
+                  <div class="card-body">
+                  <h5 class="card-title">..</h5>
+                  <p class="card-text"></p>
+                  <a href="#" class="btn btn-primary">View Post</a>
+                  </div>
+              </div>
+          </div>
             </div>
         </div>
     </section>
@@ -159,6 +192,15 @@
             <div class="zoom-wrapper d-flex">
                 <img src="images/IMG_3643-Edit.JPG" alt="">
             </div>
+            <div class="zoom-wrapper d-flex">
+              <img src="images/IMG-2112-Edted.JPG" alt="">
+          </div>
+          <div class="zoom-wrapper d-flex">
+            <img src="images/IMG_0008-Edit.JPG" alt="">
+        </div>
+        <div class="zoom-wrapper d-flex">
+          <img src="images/IMG_4452-Edit.jpg" alt="">
+      </div>
         </div>
     </section>
 
@@ -188,6 +230,12 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" class="indicator" aria-label="Slide 7">
                 <img src="images/IMG_0026-Edit.jpg" class="d-block" alt="...">
               </button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" class="indicator" aria-label="Slide 8">
+                <img src="images/IMG_4058.JPG" class="d-block" alt="...">
+              </button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" class="indicator" aria-label="Slide 9">
+                <img src="images/IMG_4290.JPG" class="d-block" alt="...">
+              </button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
@@ -210,6 +258,12 @@
               </div>
               <div class="carousel-item">
                 <img src="images/IMG_0026-Edit.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/IMG_4058.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/IMG_4290.JPG" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
