--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <div class="card bg-gray" style="width: 100%;">
                       <img src="images/IMG_2333-Edit.JPG" class="card-img-top" alt="...">
                       <div class="card-body">
-                      <h5 class="card-title">..t</h5>
+                      <h5 class="card-title">..</h5>
                       <p class="card-text">..</p>
                       <a href="#" class="btn btn-primary">View Post</a>
                       </div>
@@ -164,7 +164,7 @@
                   <img src="images/IMG_3245.JPG" class="card-img-top" alt="...">
                   <div class="card-body">
                   <h5 class="card-title">..</h5>
-                  <p class="card-text"></p>
+                  <p class="card-text">..</p>
                   <a href="#" class="btn btn-primary">View Post</a>
                   </div>
               </div>
