--- a/index.html
+++ b/index.html
@@ -85,10 +85,33 @@
 
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
+                        <img src="images/Ire.JPG" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title">IREBABS!</h5>
+                        <p class="card-text">Face Behind the Brand</p>
+                        <a href="#" class="btn btn-primary">View Post</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4" style="margin-top: 20px;">
+                    <div class="card bg-gray" style="width: 100%;">
                         <img src="images/IMG_0070-Edit.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                         <h5 class="card-title">Who is The Fairest of them all?</h5>
                         <p class="card-text">"Conscience is the mirror of our souls". A little work of my magic brought this picture to life </p>
+                        <a href="#" class="btn btn-primary">View Post</a>
+                        </div>
+                    </div>
+                </div>
+
+        
+                <div class="col-md-4" style="margin-top: 20px;">
+                    <div class="card bg-gray" style="width: 100%;">
+                        <img src="images/214247moyin-5.JPG" class="card-img-top" alt="...">
+                        <div class="card-body">
+                        <h5 class="card-title"></h5>
+                        <p class="card-text"></p>
                         <a href="#" class="btn btn-primary">View Post</a>
                         </div>
                     </div>
@@ -127,6 +150,16 @@
                     </div>
                 </div>
 
+                <div class="col-md-4" style="margin-top: 20px;">
+                  <div class="card bg-gray" style="width: 100%;">
+                      <img src="images/IMG_5829-Edit.JPG" class="card-img-top" alt="...">
+                      <div class="card-body">
+                      <h5 class="card-title">ABIKE!</h5>
+                      <p class="card-text">Handle With Care..</p>
+                      <a href="#" class="btn btn-primary">View Post</a>
+                      </div>
+                  </div>
+              </div>
                 <div class="col-md-4" style="margin-top: 20px;">
                     <div class="card bg-gray" style="width: 100%;">
                         <img src="images/IMG_2052-Edit.JPG" class="card-img-top" alt="...">
@@ -170,6 +203,36 @@
                   </div>
               </div>
           </div>
+          <div class="col-md-4" style="margin-top: 20px;">
+            <div class="card bg-gray" style="width: 100%;">
+                <img src="images/IMG_2686-Edit.JPG" class="card-img-top" alt="...">
+                <div class="card-body">
+                <h5 class="card-title">..</h5>
+                <p class="card-text">..</p>
+                <a href="#" class="btn btn-primary">View Post</a>
+                </div>
+            </div>
+        </div>
+      <div class="col-md-4" style="margin-top: 20px;">
+        <div class="card bg-gray" style="width: 100%;">
+            <img src="images/IMG_8413-Edit.JPG" class="card-img-top" alt="...">
+            <div class="card-body">
+            <h5 class="card-title">..</h5>
+            <p class="card-text">..</p>
+            <a href="#" class="btn btn-primary">View Post</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4" style="margin-top: 20px;">
+      <div class="card bg-gray" style="width: 100%;">
+          <img src="images/IMG_7658-Edit.JPG" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h5 class="card-title">..</h5>
+          <p class="card-text">..</p>
+          <a href="#" class="btn btn-primary">View Post</a>
+          </div>
+      </div>
+  </div>
             </div>
         </div>
     </section>
@@ -198,10 +261,28 @@
           </div>
           <div class="zoom-wrapper d-flex">
             <img src="images/IMG_0008-Edit.JPG" alt="">
-        </div>
-        <div class="zoom-wrapper d-flex">
-          <img src="images/IMG_4452-Edit.jpg" alt="">
-      </div>
+              </div>
+                 <div class="zoom-wrapper d-flex">
+                       <img src="images/IMG_4452-Edit.jpg" alt="">
+                   </div>
+                       <div class="zoom-wrapper d-flex">
+                     <img src="images/DTN-Kosoko2.JPG" alt="">
+                  </div>
+                     <div class="zoom-wrapper d-flex">
+                       <img src="images/203541moyin-3.JPG" alt="">
+                    </div>
+                    <div class="zoom-wrapper d-flex">
+                      <img src="images/IMG_9788.JPG" alt="">
+                  </div>
+                  <div class="zoom-wrapper d-flex">
+                    <img src="images/IMG_8577-Edit.JPG" alt="">
+                </div>
+                   <div class="zoom-wrapper d-flex">
+                     <img src="images/214251moyin-6.JPG" alt="">
+                        </div>
+                    <div class="zoom-wrapper d-flex">
+                        <img src="images/IMG_8453-Edit.JPG" alt="">
+                    </div>
         </div>
     </section>
 
@@ -229,13 +310,22 @@
                 <img src="images/IMG_3068-Edit.jpg" class="d-block" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" class="indicator" aria-label="Slide 7">
-                <img src="images/IMG_0026-Edit.jpg" class="d-block" alt="...">
+                <img src="images/IMG_9878.JPG" class="d-block" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" class="indicator" aria-label="Slide 8">
-                <img src="images/IMG_4058.JPG" class="d-block" alt="...">
+                <img src="images/IMG_0026-Edit.jpg" class="d-block" alt="...">
               </button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" class="indicator" aria-label="Slide 9">
+                <img src="images/IMG_9865.JPG" class="d-block" alt="...">
+              </button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" class="indicator" aria-label="Slide 10">
+                <img src="images/IMG_4058.JPG" class="d-block" alt="...">
+              </button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" class="indicator" aria-label="Slide 11">
                 <img src="images/IMG_4290.JPG" class="d-block" alt="...">
+              </button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" class="indicator" aria-label="Slide 12">
+                <img src="images/IMG_0028.JPG" class="d-block" alt="...">
               </button>
             </div>
             <div class="carousel-inner">
@@ -258,13 +348,21 @@
                 <img src="images/IMG_3068-Edit.jpg" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
+                <img src="images/IMG_9878.JPG" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
                 <img src="images/IMG_0026-Edit.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="images/IMG_9865.JPG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="images/IMG_4058.JPG" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item">
                 <img src="images/IMG_4290.JPG" class="d-block w-100" alt="...">
+              </div><div class="carousel-item">
+                <img src="images/IMG_0028.JPG" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
